--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Under development</h1>
+<html>
+    <head>
+        <title>Gyeldhoung Restaurant</title>
+        <link rel="icon" type="image/x-icon" href="Restaurant Logo.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <h1 style="text-align: center; width: 100%; font-size: 30">Gyeldhoung Restaurant Cum General Shop</h1>
+        <h2 style="color: gray; text-align: center; font-size: 20">Feel like home to visit</h2>
+        <br>
+        <p>Click the button below to download our app (Recommended for android users who frequently visits)<br>
+        &nbsp;<div style="border-width: 1px; border-style: solid;"><code><img src="Restaurant Logo.png" style="height:50px"><br>Gyeldhoung Restaurant<br>Size: 5.9MB<br>Minimum android version: 5.0<br><button onclick="window.open('https://www.google.com')">Download</button></p></code></div>
+        <br>
+        <p>Click the link below to open our app in browser (Recommended for iPhone users and those who rarely visits)<br>
+        &nbsp;<code><a href="https://www.google.com">The link</a></code>
+    </body>
+</html>
