--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Gyeldhoung Restaurant</title>
-        <link rel="icon" type="image/x-icon" href="assets/Restaurant Logo.png">
+        <link rel="icon" type="image/x-icon" href="assets/Restaurant logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -9,7 +9,7 @@
         <h2 style="color: gray; text-align: center; font-size: 20">Feel like home to visit</h2>
         <br>
         <p>Click the button below to download our app (Recommended for android users who frequently visits)<br>
-        &nbsp;<div style="border-width: 1px; border-style: solid;"><code><img src="assets/Restaurant Logo.png" style="height:50px"><br>Gyeldhoung Restaurant<br>Size: 5.9MB<br>Minimum android version: 5.0<br><button><a style="color: inherit; text-decoration: inherit" href="assets/Gyeldhoung Restaurant.apk">Download</a></button></p></code></div>
+        &nbsp;<div style="border-width: 1px; border-style: solid;"><code><img src="assets/Restaurant logo.png" style="height:50px"><br>Gyeldhoung Restaurant<br>Size: 5.9MB<br>Minimum android version: 5.0<br><button><a style="color: inherit; text-decoration: inherit" href="assets/Gyeldhoung Restaurant.apk">Download</a></button></p></code></div>
         <br>
         <p>Click the link below to open our app in browser (Recommended for iPhone users and those who rarely visits)<br>
         &nbsp;<div><code><a href="https://c-namgyel.github.io/Gyeldhoung-Restaurant-App">https://c-namgyel.github.io/Gyeldhoung-Restaurant-App/</a></code></div>
